# phobetron_web_app

./: .cursorrules  .zenodo.json  CELESTIAL_UI_V2_SUMMARY.md  CHANGELOG.md  CITATION.cff  CITATION.md  CONTRIBUTING.md  Comprehensive MLAI audit report.md  DEPLOYMENT_VERIFICATION_20251114.md  DEPLOY_FRONTEND_GUIDE.md  PRODUCTION_LOCKED.md  PRODUCTION_STABLE_CONFIG.md  PROMOTIONAL_BLURB.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_FIX.md  RAILWAY_QUICK_POPULATE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_v1.2.0.md  STARTUP_GUIDE.md  ZENODO_METADATA.json  check_db.py  check_event_dates.py  deploy-to-railway.ps1  monitor-vscode.ps1  nixpacks.toml  package.json  railway.toml  setup-github-actions.ps1  start-dev.ps1  test_api.ps1  test_api_detailed.ps1  test_comprehensive.py  test_endpoint.ps1  test_endpoint_simple.py  test_ml_endpoint.py  test_small_range.py  (+2 more)
Enhanced Planet Size Scaling/: DOCKER Phobetron web application.md  Enhanced planet size scaling.txt
backend/: .env.example  .gitignore  Dockerfile  Procfile  check_db_contents.py  check_schema.py  diagnose_endpoint.py  railway-start.sh  railway.json  requirements-railway.txt  requirements.txt  setup_db_user.sql  (+1 more)
backend_backup_20251102_011427/: pyproject.toml  seed_events_data.py  seed_orbital_data.py  test_models.py  test_server.py
backend_backup_20251102_011427/app/: main.py
backend_backup_20251102_011427/app/models/: correlations.py
backend_backup_20251102_011427/app/schemas/: events.py  scientific.py
backend_backup_20251102_011427/tests/: __init__.py
(+617 files in other folders)
